discussion/kv_engine/141044/141044_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Fix DocKey::to_string() parsing of queued_item's keys

Currently we don't parse the key of a empty, checkpoint_start,
set_vbucket_sate and checkpoint_end keys correctly. For example the
below checkpoint dump shows that we crop the first few chars and
interpret them as leb128 values:
{2803,empty,cid:0x1:0x65:0x6d:pty,118,[m]}
{2803,checkpoint_start,cid:0x1:0x63:0x68:eckpoint_start,129,[m]}
{2803,system_event[d],cid:0x1:0x0:0x385:_collection,176,}
{2804,set_vbucket_state,cid:0x1:0x73:0x65:t_vbucket_state,241,[m]}
{2804,checkpoint_end,cid:0x1:0x63:0x68:eckpoint_end,127,[m]}

With this patch:
{2803,empty,cid:0x1:empty,118,[m]}
{2803,checkpoint_start,cid:0x1:checkpoint_start,129,[m]}
{2803,system_event[d],cid:0x1:0x0:0x385:_collection,176,}
{2804,set_vbucket_state,cid:0x1:set_vbucket_state,241,[m]}
{2804,checkpoint_end,cid:0x1:checkpoint_end,127,[m]}

To also ensure we parse system events correctly, this patch moves enum
Class SystemEvent to utilities/systemevent.h so that it can be accessed
by dockey.cTo also ensure we parse system events correctly, this patch
moves enum Class SystemEvent to utilities/systemevent.h so that it can
be accessed by dockey.cc.

This patch also clang-tidys some lines in checkpoint_test.cc and also
adds test to ensure correct parsing of all types of items.

Change-Id: I31db2826316f60b068f7e9370e488f0df0ae4324

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2020-11-26 18:15:23.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-11-26 20:02:59.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5926/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/utilities/systemevent.h:59:16: error: no member named "invalid_argument" in namespace "std" [clang-diagnostic-error]
    throw std::invalid_argument("to_string(SystemEvent) unknown " +
               ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5926/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/utilities/systemevent.h:59:16:
error: no member named "invalid_argument" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5926/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7761/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0007/0047]: multi set...Exceeded maximum wait time of 60000000us waiting for stat "ep_queue_size" to be 0 (last value:16619) - aborting.
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7761/ )

Failure of a CTest test [2020-11-26T19:37:43.475Z]   3/390 Test #242: ep_testsuite_basic.value_eviction.magma .....................................................................Child aborted ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7761/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15304/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/4460/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32139/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27721/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7375/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6450/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7484/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2020-11-27 09:41:59.000000000
Message: 
Patch Set 3:

(1 comment)
----------------------------------------------------------------------------------------------------------------------
